--- a/app/src/main/res/layout/activity_register_acivity.xml
+++ b/app/src/main/res/layout/activity_register_acivity.xml
@@ -12,8 +12,8 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_700"
+        android:layout_height="match_parent"
+        android:background="@color/app_color"
 
         >
         <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -30,17 +30,31 @@
     <ImageView
         android:id="@+id/app_icon_register"
         android:layout_width="207dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="32dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="24dp"
         android:gravity="bottom"
         android:scaleType="centerCrop"
-
-        android:src="@drawable/icon_medi"
+        android:src="@drawable/app_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/app_name_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="32dp"
+        android:text="@string/appName"
+        android:textColor="@color/white"
+        android:textSize="24sp"
 
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_icon_register"
+
+        />
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_register"
         android:layout_width="match_parent"
@@ -48,7 +62,7 @@
 
         app:cardCornerRadius="40dp"
         app:cardBackgroundColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/app_icon_register"
+        app:layout_constraintTop_toBottomOf="@id/app_name_register"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/white"
@@ -63,121 +77,21 @@
             android:paddingTop="12dp"
             android:paddingStart="32dp"
             android:paddingEnd="32dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@id/app_icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:orientation="vertical"
 
             >
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/user_name"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:errorEnabled="true"
-
-                >
-                <com.google.android.material.textfield.TextInputEditText
-
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="text|textMultiLine"
-                    android:hint="@string/first_name_hint"
-
-
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                app:errorEnabled="true"
-                >
-
-
-                <com.google.android.material.textfield.TextInputEditText
-
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textEmailAddress|textMultiLine"
-                    android:hint="@string/email_hint"
-
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:endIconMode="password_toggle"
-                app:passwordToggleEnabled="true"
-                app:errorEnabled="true"
-
-
-                >
-
-
-                <com.google.android.material.textfield.TextInputEditText
-
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textPassword|textMultiLine"
-                    android:hint="@string/password_hint"
-
-
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/confirm_password"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:endIconMode="password_toggle"
-                app:passwordToggleEnabled="true"
-                app:errorEnabled="true"
-
-
-                >
-
-
-                <com.google.android.material.textfield.TextInputEditText
-
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:hint="@string/confirmPassword"
-                    android:inputType="textPassword|textMultiLine"
-
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-            <Button
-                android:id="@+id/btn_register"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="onRegisterClick"
-                android:text="@string/registerbtn"
-
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="60dp"
-                android:layout_marginTop="8dp"
-                android:layout_gravity="center"
-                android:textSize="24sp"
-                android:textColor="@color/white"
-                android:background="@drawable/button_background"
-                />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="2"
-                android:layout_gravity="center"
+                android:layout_gravity="start"
                 android:paddingTop="8dp"
-                android:layout_marginBottom="32dp"
+                android:layout_marginBottom="4dp"
                 >
 
                 <TextView
@@ -200,10 +114,113 @@
                     android:gravity="start"
 
                     android:text="@string/login"
-                    android:textColor="@color/purple_700"
+                    android:textColor="@color/app_color"
                     android:textSize="16sp"
                     android:textStyle="normal" />
             </LinearLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/user_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text|textMultiLine"
+                    android:hint="@string/first_name_hint"
+
+
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                >
+
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textEmailAddress|textMultiLine"
+                    android:hint="@string/email_hint"
+
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:endIconMode="password_toggle"
+                app:passwordToggleEnabled="true"
+                app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+                >
+
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textPassword|textMultiLine"
+                    android:hint="@string/password_hint"
+
+
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:endIconMode="password_toggle"
+                app:passwordToggleEnabled="true"
+                app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+                >
+
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:hint="@string/confirmPassword"
+                    android:inputType="textPassword|textMultiLine"
+
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onRegisterClick"
+                android:text="@string/registerbtn"
+                android:layout_marginBottom="32dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/app_color"
+                android:background="@drawable/button_background"
+                />
+
 
 
         </LinearLayout>
