--- a/app/src/main/res/layout/drag_item.xml
+++ b/app/src/main/res/layout/drag_item.xml
@@ -1,44 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_margin="12dp"
 
+         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/med_image"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                 />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_margin="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+            <View
+                android:id="@+id/line"
+                android:layout_width="1dp"
                 android:layout_height="60dp"
-                android:layout_toEndOf="@id/med_image"
-                android:padding="12dp"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/med_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Sub item title"/>
-                <TextView
-                    android:id="@+id/med_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Description goes here..."/>
-            </LinearLayout>
-        </RelativeLayout>
+
+                android:layout_marginStart="12dp"
+                 app:layout_constraintStart_toEndOf="@id/med_image"
+                  app:layout_constraintTop_toTopOf="@id/med_image"
+                />
+<TextView
+    android:id="@+id/med_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="12dp"
+     android:layout_marginTop="8dp"
+    android:text="doaa"
+     app:layout_constraintStart_toEndOf="@id/line"
+    app:layout_constraintTop_toTopOf="@id/med_image"
+    />
+            <TextView
+                android:id="@+id/med_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1000"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toEndOf="@id/line"
+                app:layout_constraintTop_toBottomOf="@id/med_name"
+                />
+            <TextView
+                android:id="@+id/med_adder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                 app:layout_constraintTop_toTopOf="parent"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 android:text="doaa essan"
+                  android:layout_marginEnd="16dp"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
     </androidx.cardview.widget.CardView>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
