--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#189AB4</color>
+    <color name="app_color">#189AB4</color>
     <color name="color1"></color>
     <color name="color2"></color>
     <color name="color3"></color>
