--- a/app/src/main/res/layout/fragment_add_health_taker.xml
+++ b/app/src/main/res/layout/fragment_add_health_taker.xml
@@ -95,6 +95,8 @@
                 app:backgroundTint="#3F51B5"
                 android:background="@drawable/input_design"
                 android:text="Invite"
+                android:padding="5dp"
+                android:textSize="25sp"
                 app:layout_constraintTop_toBottomOf="@+id/email_layout"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
