--- a/app/src/main/res/layout/fragment_medications.xml
+++ b/app/src/main/res/layout/fragment_medications.xml
@@ -36,7 +36,7 @@
         android:layout_marginEnd="96dp"
         android:scaleType="fitCenter"
         android:visibility="gone"
-        android:src="@drawable/prescription"
+        android:src="@drawable/emptyy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
