--- a/app/src/main/res/layout/fragment_health_takers.xml
+++ b/app/src/main/res/layout/fragment_health_takers.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".healthTakers.view.HealthTakersFragment">
-
-
+    android:id="@+id/requst_layout"
+    tools:context=".healthTakers.request.view.RequestFragment">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
@@ -36,11 +35,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:lottie_speed="1" />
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="57dp"
         android:layout_width="match_parent"
         android:layout_height="650dp"
         android:id="@+id/rv_taker"
-        tools:listitem=""
+        tools:listitem="@layout/health_taker_item"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/floatingActionButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
