--- a/app/src/main/res/layout/drag_item.xml
+++ b/app/src/main/res/layout/drag_item.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-
+           android:elevation="10dp"
+        app:cardCornerRadius="16dp"
          app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +34,8 @@
                 android:id="@+id/line"
                 android:layout_width="1dp"
                 android:layout_height="60dp"
-
+               android:visibility="visible"
+                android:background="@color/app_color"
                 android:layout_marginStart="12dp"
                  app:layout_constraintStart_toEndOf="@id/med_image"
                   app:layout_constraintTop_toTopOf="@id/med_image"
@@ -59,9 +61,20 @@
                 app:layout_constraintTop_toBottomOf="@id/med_name"
                 />
             <TextView
-                android:id="@+id/med_adder"
+                android:id="@+id/med_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="1000"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toEndOf="@id/med_amount"
+                app:layout_constraintTop_toBottomOf="@id/med_name"
+                />
+            <TextView
+                android:id="@+id/med_adder"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
