--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,6 +16,7 @@
         app:civ_border_width="2dp"
         android:src="@drawable/user_icon"
         android:layout_height="100dp"
+        android:visibility="visible"
         android:layout_marginStart="16sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
