--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,9 +13,5 @@
     <item
         android:id="@+id/healthTakersFragment"
         android:icon="@drawable/icon_health"
-        android:title="HealthTakers" />
-    <item
-        android:id="@+id/patientMedicsListFragment"
-        android:icon="@drawable/icon_more"
-        android:title="Taker" />
+        android:title="@string/healthtakers" />
 </menu>
