--- a/app/src/main/res/layout/activity_register_acivity.xml
+++ b/app/src/main/res/layout/activity_register_acivity.xml
@@ -3,7 +3,7 @@
     android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@color/purple_500"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -112,7 +112,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:gravity="start"
-
+                        android:onClick="openLogin"
                     android:text="@string/login"
                     android:textColor="@color/app_color"
                     android:textSize="16sp"
