--- a/app/src/main/res/layout/fragment_add_health_taker.xml
+++ b/app/src/main/res/layout/fragment_add_health_taker.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#3F51B5"
+        android:background="@color/blue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -82,7 +82,7 @@
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:textColor="#0C0C0C"
-                    android:textColorHint="@color/colorPrimary"
+                    android:textColorHint="@color/blue"
                     android:textSize="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
             <Button
@@ -92,7 +92,7 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp"
                 android:layout_marginBottom="37dp"
-                app:backgroundTint="#3F51B5"
+                app:backgroundTint="@color/blue"
                 android:background="@drawable/button_background"
                 android:text="Invite"
                 android:padding="5dp"
