--- a/app/src/main/res/layout/fragment_display_medicine.xml
+++ b/app/src/main/res/layout/fragment_display_medicine.xml
@@ -242,7 +242,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
-            android:text="TextView"
+            android:text="droop3"
             app:layout_constraintStart_toStartOf="@id/timer2"
             app:layout_constraintTop_toBottomOf="@id/timer2"
             tools:layout_editor_absoluteX="17dp"
