--- a/app/src/main/res/layout/fragment_health_takers.xml
+++ b/app/src/main/res/layout/fragment_health_takers.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:layout_marginEnd="37dp"
-        android:layout_marginBottom="57dp"
+        android:layout_marginBottom="45dp"
         android:elevation="7dp"
-        android:backgroundTint="#3F51B5"
+        android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/icon_person_add"
@@ -35,10 +35,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:lottie_speed="1" />
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="77dp"
+        android:layout_marginTop="79dp"
         android:layout_width="match_parent"
         android:layout_height="650dp"
-
         android:id="@+id/rv_taker"
         tools:listitem="@layout/health_taker_item"
         app:layout_constraintTop_toTopOf="parent"
