--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#3F51B5</color>
-    <color name="purple_700">#3F51B5</color>
+    <color name="purple_500">#1A93AC</color>
+    <color name="purple_700">#1A93AC</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#3F51B5</color>
-    <color name="app_color">#3F51B5</color>
+    <color name="blue">#1A93AC</color>
+    <color name="app_color">#189AB4</color>
     <color name="color1"></color>
     <color name="color2"></color>
     <color name="color3"></color>
